--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,15 @@
+facebook_login:
+    path: /login/check-facebook
+
+#google_login:
+#    path: /login/check-google
+
+custom_login:
+    path: /login/check-custom
+
+github_login:
+    path: /login/check-github
+
 NelmioApiDocBundle:
     resource: "@NelmioApiDocBundle/Resources/config/routing.yml"
     prefix:   /doc
@@ -13,3 +25,6 @@ core:
 app:
     resource: '@AppBundle/Controller/'
     type: annotation
+
+api_login_check:
+    path: /login_check
