--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -76,14 +76,14 @@ nelmio_cors:
         allow_credentials: true
         allow_origin: ['*']
         allow_headers: ['*']
-        allow_methods: ['POST', 'PUT', 'GET', 'DELETE', 'PATCH']
+        allow_methods: ['POST', 'PUT', 'GET', 'DELETE', 'PATCH', 'OPTIONS']
         max_age: 0
     paths:
         '^/':
             origin_regex: true
             allow_origin: ['*']
             allow_headers: ['*']
-            allow_methods: ['POST', 'PUT', 'GET', 'DELETE', 'PATCH']
+            allow_methods: ['POST', 'PUT', 'GET', 'DELETE', 'PATCH', 'OPTIONS']
             max_age: 3600
 
 fos_user:
